<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嗳呦</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="login_now">立即登录</string>
    <string name="settings">设置</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_discount">我的优惠券</string>
    <string name="my_care">我的关注</string>
    <string name="register">注册</string>
    <string name="click_again_exit">再按一次返回退出！</string>
    <string name="title_activity_plan">预约美甲</string>
    <string name="p_input_mobile">请输入手机号</string>
    <string name="p_input_password">请输入密码</string>
    <string name="p_input_mobile_or_acc">请输入手机号</string>
    <string name="forget_psw">忘记密码</string>
    <string name="update_password">修改密码</string>
    <string name="title_activity_update_password">修改密码</string>
    <string name="confirm_update">确认修改</string>
    <string name="reset_password">重置密码</string>
    <string name="done">完 成</string>
    <string name="reg">注 册</string>
    <string name="hint_password">密码至少6位不能为空</string>
    <string name="yes">确 定</string>
    <string name="cancel">取消</string>
    <string name="call_number">呼出</string>
    <string name="alert_msg_call_service">咨询、投诉都可以拨打客服电话，现在拨打吗？</string>
    <string name="choose_nail_artist">选美甲师</string>
    <string name="call_service">客服%s</string>
    <string name="choose_nail">选中该作品</string>
    <string name="nail_items">美甲作品</string>
    <string name="yuan">元</string>
    <string name="choose_artist">选美甲师</string>
    <string name="artist_name">美甲师</string>

    <string-array name="orders">
        <item>综合排序</item>
        <item>价格从低到高</item>
        <item>价格从高到低</item>
    </string-array>

    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_suggestion">意见反馈</string>
    <string name="title_activity_service_area">服务范围</string>
    <string name="change_data">修改资料</string>
    <string name="confirm_logout">确定退出登录吗</string>
    <string name="hint_suggestion">请在这里写下您的宝贵意见，来帮助我们为您提供更好的服务！！</string>
    <string name="suggestion_done">提交反馈成功</string>
    <string name="suggestion_dialog_msg">您好，我们已经收到了您的反馈，会尽快处理！</string>
    <string name="order_center">订单中心</string>
    <string name="delete">删 除</string>
    <string name="personal_center">个人中心</string>
    <string name="publish">发布</string>
    <string name="manager">管理</string>
    <string name="home_page">首页</string>
    <string name="next_step">下一步</string>
    <string name="order_confirm">订单确认</string>
    <string name="nail_honor_info">美甲师荣誉等级</string>
    <string name="s_low_to_high">%s从低到高</string>
    <string name="s_high_to_low">%s从高到低</string>
    <string name="distance">距离</string>
    <string name="price">价格</string>
    <string name="star_level">星级</string>
    <string name="publish_nail">发布作品</string>
    <string name="loading">连接中...</string>
    <string name="congratulation">恭喜您！</string>
    <string name="congrate_reg">恭喜你注册成功！请立即登录！</string>
    <string name="warn">温馨提示</string>
    <string name="open_gps_msg">打开GPS可以更精确的定位，确定打开？</string>
    <string name="bad_comment">差评</string>
    <string name="comment_normal">中评</string>
    <string name="comment_good">好评</string>
    <string name="comment_order">评价订单</string>
    <string name="apply_refund">申请退款</string>
    <string name="commit_apply">提交申请</string>
    <string name="my_info">我的信息</string>
    <string name="my_resume">我的简历</string>
    <string name="change_resume">修改简历</string>
    <string name="plan_nail">预约美甲</string>
    <string name="refunding">正在退款</string>
    <string name="refund_complete">退款成功</string>
    <string name="refund_failed">退款失败</string>
    <string name="service_city">已开通城市</string>
    <string name="choose_city">选择城市</string>
    <string name="order_d_num">共接单%d次</string>
    <string name="pro_">专业：</string>
    <string name="com_">沟通：</string>
    <string name="on_time_">守时：</string>
    <string name="d_num">%d条</string>
    <string name="d_price">￥%d</string>
    <string name="s_price">￥%s</string>
    <string name="time_cost_s">耗时：%s分钟</string>
    <string name="time_keep_s">保持：%s天</string>
    <string name="rmb_s">￥%s</string>
    <string name="nail_info">作品详情</string>
    <string name="plan_time">预约时间</string>
    <string name="remain_time_d">剩余时间%d秒</string>
    <string name="get_yzm">获取验证码</string>
    <string name="search_result">搜索结果</string>
    <string name="location_failed">定位失败</string>
    <string name="average_price_s">均价：￥%s</string>
    <string name="find_ok">找回成功！</string>
    <string name="taxi_fee">车费说明</string>
    <string name="discount_rule">优惠券规则</string>
    <string name="taxi_tab_title">里程数（公里）</string>
    <string name="fee_05"><![CDATA[0<X≤5]]></string>
    <string name="fee_510"><![CDATA[5<X≤10]]></string>
    <string name="fee_1015"><![CDATA[10<X≤15]]></string>
    <string name="fee_15_20"><![CDATA[15<X≤20]]></string>
    <string name="fee_20"><![CDATA[X>20]]></string>
    <string name="load_failed">加载失败</string>
    <string name="modify_ok">修改成功！</string>
    <string name="artist_avatar_upload">美甲师的头像通过审核后才能显示。</string>
    <string name="please_input_image">请选择图片！</string>
    <string name="collect_ok">收藏成功！</string>
    <string name="cancel_ok">取消成功</string>
    <string name="get_taxi_failed">获取打车费用失败！</string>
    <string name="update_resume_notice">如需修改简历，请联系客服！</string>
    <string name="real_price_s">实付金额：￥%s</string>
    <string name="input_plan_time">请输入预约时间</string>
    <string name="input_address">请输入地址</string>
    <string name="day1">今天</string>
    <string name="day2">明天</string>
    <string name="day3">后天</string>
    <string name="day4">大后天</string>
    <string name="busy">忙</string>
    <string name="free">闲</string>
    <string name="input_contact">请输入联系人姓名</string>
    <string name="input_mobile">请输入联系人手机号</string>
    <string name="input_planTime">请选择预约时间</string>
    <string name="order_date_s">下单时间：%s</string>
    <string name="price_r_s">价格：￥%s</string>
    <string name="orderInfo">订单信息</string>
    <string name="comment">评价</string>
    <string name="order_null">订单不存在</string>
    <string name="price_s">价格：￥%s</string>
    <string name="select_address">服务地址</string>
    <string name="date_limit">使用期限：%s</string>
    <string name="found_new_version_s">发现新版本!%s</string>
    <string name="is_update">是否立即升级？</string>
    <string name="aready_newest">已经是最新版本了</string>
    <string name="order_not_exist">订单不存在！</string>
    <string name="distance_s">距您%s公里</string>
    <string name="expire">该优惠券已过期！</string>
    <string name="expired">已过期</string>
    <string name="used">已使用</string>
    <string name="getting">获取中...</string>
    <string name="commit_ok">提交成功</string>
    <string name="order_ok">下单成功</string>
    <string name="pay_now">现在支付</string>
    <string name="order_msg">订单已生成，请在10分钟内支付，否则订单会自动取消。</string>
    <string name="publish_ok">发布成功</string>
    <string name="continue_publish">继续发布</string>
    <string name="search_failed">搜索失败</string>
    <string name="refund_ok">退款成功</string>
    <string name="net_failed">网络错误</string>
    <string name="get_coupon">领优惠券</string>
    <string name="share_coupon_notice">亲，您分享之后可以领取一张优惠券哦！</string>
    <string name="share">分享</string>
    <string name="share_ok">分享成功</string>
    <string name="get_ok">领取成功</string>
    <string name="get_now">立即领取</string>
    <string name="check_now">立即查看</string>
    <string name="not_use_coupon">不使用优惠券</string>
    <string name="not_open_city">%s暂时还没有开通服务</string>
    <string name="not_choose_this_city">不能选择该城市！</string>
    <string name="artist_cannot_plan">美甲师不能预约</string>
    <string name="know">我知道了</string>
    <string name="setting_ok">设置成功！</string>
    <string name="not_valid_blocks">该时间段不可预约！</string>
    <string name="new_hot">新品热门</string>
    <string name="locating">定位中...</string>
    <string name="coupon_notice">恭喜您成功领取一张优惠券</string>
    <string name="taxi_fee_notice">为确保您享受更好的服务，美甲师需打车到您指定的预约地点，超过一定的距离需要您支付一定的车费，具体规则如下：</string>
    <string name="clear_ok">清除成功！</string>
    <string name="attention_ok">关注成功！</string>
    <string name="publish_now">立即发布</string>
    <string name="product_null">您当前还没有发布任何作品</string>
    <string name="upload_failed">图片上传失败！</string>
    <string name="re_upload">重新上传</string>
    <string name="input_plan_address">请输入预约地址</string>
    <string name="hint_yzm">请输入验证码</string>
    <string name="hint_mobile">请输入您的手机号</string>
    <string name="confirm_pay">您是否已经做好美甲，想要确认付款？</string>
    <string name="confirm_ok">付款成功！</string>
    <string name="product_manage">作品管理</string>
    <string name="edit">编辑</string>
    <string name="update_location">更新位置中...</string>
    <string name="input_init_psw">请输入初始密码！</string>
    <string name="input_new_psw">请输入新密码！</string>
    <string name="input_repeat_psw">请输入重复密码！</string>
    <string name="input_repeat_not_match">重复密码与新密码不同！</string>
    <string name="confirm_delete">确定删除？</string>
    <string name="update_ok">更新成功！</string>
    <string name="delete_ok">删除成功</string>
    <string name="modify_product">修改作品</string>
    <string name="get_coupon_msg">亲,您现在可以领取优惠券了</string>
    <string name="not_set_time">该时间段不可设置！</string>
    <string name="order_empty">抱歉，您还没有相关的订单。</string>
    <string name="empty_nail">您还没有关注的美甲师哦!</string>
    <string name="empty_product">您还没有收藏的作品哦！</string>
    <string name="empty_coupon">您还没有可以使用的优惠券哦！</string>
    <string name="address_detail">详细地址</string>
    <string name="address_located">定位地址</string>


</resources>
