<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/windowBackground"
    android:layout_height="match_parent">

    <include layout="@layout/head_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/user_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar"

            android:layout_width="@dimen/avatar_center_size"
            android:layout_height="@dimen/avatar_center_size"
            android:src="@drawable/default_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize_2"
            android:text="昵称" />
    </LinearLayout>


    <TextView
        android:drawableLeft="@drawable/ic_my_discount"
        android:id="@id/my_discount_card"
        style="@style/text_click_item"
        android:text="@string/my_discount" />


    <TextView
        android:drawableLeft="@drawable/ic_my_collect"
        android:id="@id/my_collection"
        style="@style/text_click_item"
        android:text="@string/my_collection" />


    <TextView
        android:drawableLeft="@drawable/ic_my_care"
        android:id="@id/my_attention"
        style="@style/text_click_item"
        android:text="@string/my_care" />


    <TextView
        android:drawableLeft="@drawable/ic_settings"
        android:id="@id/settings"
        style="@style/text_click_item"
        android:text="@string/settings" />


</LinearLayout>