<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/windowBackground">


    <com.finger.support.widget.EditItem
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:edit_drawable="@drawable/ic_mobile_pink"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:edit_hint="@string/p_input_mobile_or_acc"
        android:id="@+id/edit_phone" />

    <com.finger.support.widget.EditItem
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:edit_drawable="@drawable/ic_psw"
        android:layout_below="@id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:edit_hint="@string/p_input_password"
        android:id="@+id/edit_password" />

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_text_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_alignParentRight="true"
        android:id="@+id/forget_password"
        android:onClick="onClick"
        android:clickable="true"
        android:textSize="@dimen/textSize_dp_24px"
        android:textColor="@color/textColorPink"
        android:text="@string/forget_psw" />

    <Button
        android:layout_marginTop="@dimen/login_btn_margin_top"
        style="@style/button_large"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/forget_password"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:id="@+id/login" />
</RelativeLayout>