<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/head_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/activity_padding"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/comment_group"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
s
            <RadioButton
                android:id="@+id/rb_good"
                style="@style/comment_rb_style"
                android:checked="true"
                android:textColor="#e45b63"
                android:text="@string/comment_good" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <RadioButton
                android:id="@+id/rb_normal"
                android:textColor="#c99918"
                style="@style/comment_rb_style"
                android:text="@string/comment_normal" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <RadioButton
                android:id="@+id/rb_bad"
                android:textColor="#808080"
                style="@style/comment_rb_style"
                android:text="@string/bad_comment" />
        </RadioGroup>

        <EditText
            android:id="@+id/content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:padding="6dp"
            android:background="@drawable/corner_frame_white_solid" />

        <com.sp.lib.widget.AddImageItem
            android:id="@+id/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            style="@style/comment_star_style"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/comment_star_text_style"
                android:text="专业：" />

            <RatingBar
                android:id="@+id/ratingBar_pro"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:numStars="5"
                style="@style/comment_ratingBar"
                android:rating="2" />
        </LinearLayout>

        <LinearLayout style="@style/comment_star_style">

            <TextView
                style="@style/comment_star_text_style"
                android:text="沟通：" />

            <RatingBar
                android:id="@+id/ratingBar_talk"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:numStars="5"
                style="@style/comment_ratingBar"
                android:rating="2" />
        </LinearLayout>

        <LinearLayout style="@style/comment_star_style">

            <TextView
                style="@style/comment_star_text_style"
                android:text="守时：" />

            <RatingBar
                android:id="@+id/ratingBar_time"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:numStars="5"
                style="@style/comment_ratingBar"
                android:rating="2" />
        </LinearLayout>

        <Button
            android:id="@+id/commit"
            android:layout_marginTop="@dimen/button_to_text"
            style="@style/button_large"
            android:text="提    交" />
    </LinearLayout>
</LinearLayout>